fix load-state-indicator invisible on Minimal theme

--- a/src/styles.css
+++ b/src/styles.css
@@ -194,7 +194,6 @@ input.interactive-stdin {
 
 .load-state-indicator.visible {
 	transform: translateX(0);
-	transform: translateX(var(--folding-offset, 0));
 	opacity: 1;
 	pointer-events: all;
 }
